# Computational-mathematics

lab1/: CMakeLists.txt  equalation.cpp  equalation.h  main.cpp
